; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/disp/extr_gv100.c_gv100_disp_wndw_cnt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/disp/extr_gv100.c_gv100_disp_wndw_cnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_disp = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gv100_disp_wndw_cnt(%struct.nvkm_disp* %0, i64* %1) #0 {
  %3 = alloca %struct.nvkm_disp*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.nvkm_device*, align 8
  store %struct.nvkm_disp* %0, %struct.nvkm_disp** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = load %struct.nvkm_disp*, %struct.nvkm_disp** %3, align 8
  %7 = getelementptr inbounds %struct.nvkm_disp, %struct.nvkm_disp* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.nvkm_device*, %struct.nvkm_device** %9, align 8
  store %struct.nvkm_device* %10, %struct.nvkm_device** %5, align 8
  %11 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %12 = call i32 @nvkm_rd32(%struct.nvkm_device* %11, i32 6357092)
  %13 = sext i32 %12 to i64
  %14 = load i64*, i64** %4, align 8
  store i64 %13, i64* %14, align 8
  %15 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %16 = call i32 @nvkm_rd32(%struct.nvkm_device* %15, i32 6357108)
  %17 = and i32 %16, 66060288
  %18 = ashr i32 %17, 20
  ret i32 %18
}

declare dso_local i32 @nvkm_rd32(%struct.nvkm_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
